--- a/city_carla.yaml
+++ b/city_carla.yaml
@@ -15,14 +15,13 @@ vehicle_base:
     perception:
       activate: true # when not activated, objects positions will be retrieved from server directly
       camera:
-        visualize: 4 # how many camera images need to be visualized. 0 means no visualization for camera
-        num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+        visualize: 3 # how many camera images need to be visualized. 0 means no visualization for camera
+        num: 3 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
         # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
         positions:
           - [2.5, 0, 1.0, 0]
           - [0.0, 0.3, 1.8, 100]
           - [0.0, -0.3, 1.8, -100]
-          - [-2.0, 0.0, 1.5, 180]
       
       lidar: # lidar sensor configuration, check CARLA sensor reference for more details
         visualize: true
@@ -43,11 +42,38 @@ vehicle_base:
         show_animation: true # whether to show real-time trajectory plotting
 
   behavior:
+    max_speed: 70
+    tailgate_speed: 105 # when a vehicle needs to be close to another vehicle asap
+    overtake_allowed: false # whether overtake allowed, typically false for platoon leader
+    collision_time_ahead: 1.3 # used for collision checking
+    overtake_counter_recover: 35
     ignore_traffic_light: false # whether to ignore traffic light
-    collision_time_ahead: 2.0 # used for collision checking
+    local_planner:
+      trajectory_dt:
 
 carla_traffic_manager:
   random: false # whether to random select vehicles' color and model
   ignore_lights_percentage: 0 # whether set the traffic ignore traffic lights
-  vehicle_list:
-    - spawn_position: [0, 0, -0.00, 0.00, 90.00, 0.00]
+  global_distance: 4.0
+  global_speed_perc: -100
+  vehicle_list: ~
+  range:
+    - [ 50, 250, 135, 145, 50, 4, 30]
+
+scenario:
+  single_cav_list: # this is for merging vehicle or single cav without v2x
+    - name: single_cav
+      spawn_position: [-48.82, 80.26, 1.00, 0.00, 90.00, 0.00]
+      # when this is defined, the above parameter will be ignored, and a special map function will
+      # be used to define the spawn position based on the argument
+      spawn_special: [ 0.625 ]
+      sensing:
+        perception:
+          camera:
+            visualize: 1 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 1 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [ 2.5, 0, 1.0, 0 ]
+          lidar:
+            visualize: true
