--- a/freeway_carla.yaml
+++ b/freeway_carla.yaml
@@ -15,26 +15,13 @@ vehicle_base:
     perception:
       activate: true # when not activated, objects positions will be retrieved from server directly
       camera:
-        visualize: 3 # how many camera images need to be visualized. 0 means no visualization for camera
-        num: 3 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+        visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+        num: 0 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
         # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
-        positions:
-          - [2.5, 0, 1.0, 0]
-          - [0.0, 0.3, 1.8, 100]
-          - [0.0, -0.3, 1.8, -100]
+        positions: []
       
       lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-        visualize: true
-        channels: 32
-        range: 50
-        points_per_second: 100000
-        rotation_frequency: 20 # the simulation is 20 fps
-        upper_fov: 10.0
-        lower_fov: -30.0
-        dropoff_general_rate: 0.0
-        dropoff_intensity_limit: 1.0
-        dropoff_zero_intensity: 0.0
-        noise_stddev: 0.0
+        visualize: false
 
     localization:
       activate: true # when not activated, ego position will be retrieved from server directly
@@ -49,13 +36,38 @@ vehicle_base:
     overtake_counter_recover: 35
     ignore_traffic_light: false # whether to ignore traffic light
     local_planner:
-      trajectory_dt:
+      trajectory_dt: 0.25
 
 carla_traffic_manager:
   random: false # whether to random select vehicles' color and model
   ignore_lights_percentage: 0 # whether set the traffic ignore traffic lights
   global_distance: 4.0
   global_speed_perc: -300
-  vehicle_list:
-    - spawn_position: [330.00, 42.2642, 2.00, 0.00, 0.00, 0.00]
-    - spawn_position: [395.00, 55.2642, 1.00, 0.00, -75.00, 0.00]
+  
+scenario:
+  single_cav_list:
+    - name: single_cav
+      spawn_position: [395.00, 55.2642, 1.00, 0.00, -75.00, 0.00]
+      destination: [600, 145.51, 0.3]
+      sensing:
+        perception:
+          camera:
+            visualize: 1
+            num: 1
+            positions:
+              - [2.5, 0, 1.0, 0]
+          lidar:
+            visualize: true
+    - name: cav2
+      spawn_position: [330.00, 42.2642, 2.00, 0.00, 0.00, 0.00]
+      destination: [600, 145.51, 0.3]
+      sensing:
+        perception:
+          camera:
+            visualize: 1 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 1 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [ 2.5, 0, 1.0, 0 ]
+          lidar:
+            visualize: true
