--- a/freeway_carla.yaml
+++ b/freeway_carla.yaml
@@ -13,7 +13,6 @@ world:
 vehicle_base:
   sensing:
     perception:
-      activate: true # when not activated, objects positions will be retrieved from server directly
       camera:
         visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
         num: 0 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -25,52 +24,63 @@ vehicle_base:
 
     localization:
       activate: true # when not activated, ego position will be retrieved from server directly
-      debug_helper:
-        show_animation: true # whether to show real-time trajectory plotting
 
+  safety_manager:
+    print_message: true
+    collision_sensor:
+      history_size: 30
+      col_thresh: 1
+    stuck_detector:
+      len_thresh: 500
+      speed_thresh: 0.5
+    traffic_light_detector:
+      light_dist_thresh: 20
+  
   behavior:
-    max_speed: 95
-    tailgate_speed: 105 # when a vehicle needs to be close to another vehicle asap
-    overtake_allowed: false # whether overtake allowed, typically false for platoon leader
+    max_speed: 90
     collision_time_ahead: 1.3 # used for collision checking
-    overtake_counter_recover: 35
-    ignore_traffic_light: false # whether to ignore traffic light
+    ignore_traffic_light: true # whether to ignore traffic light
     local_planner:
       trajectory_dt: 0.25
 
 carla_traffic_manager:
   random: false # whether to random select vehicles' color and model
   ignore_lights_percentage: 0 # whether set the traffic ignore traffic lights
-  global_distance: 4.0
-  global_speed_perc: -300
+  auto_lane_change: true
 
 scenario:
   single_cav_list:
-    - name: single_cav
-      spawn_position: [395.00, 55.2642, 1.00, 0.00, -75.00, 0.00]
-      destination: [600, 145.51, 0.3]
+    - name: cav1
+      spawn_position: [365.00, 35.00, 1.00, 0.00, -10.00, 0.00]
+      destination: [400, -50, 0]
       sensing:
         perception:
-          camera:
-            visualize: 1
-            num: 1
-            positions:
-              - [2.5, 0, 1.0, 0]
-          lidar:
-            visualize: true
-    - name: cav2
-      spawn_position: [330.00, 42.2642, 2.00, 0.00, 0.00, 0.00]
-      destination: [600, 145.51, 0.3]
-      sensing:
-        perception:
+          activate: true
           camera:
             visualize: 4 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
             # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
             positions:
-              - [ 2.5, 0, 1.0, 0 ]
-              - [ 0.0, 0.3, 1.8, 100 ]
-              - [ 0.0, -0.3, 1.8, -100 ]
-              - [ -2.0, 0.0, 1.5, 180 ]
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
           lidar:
             visualize: true
+    - name: cav2
+      spawn_position: [398.00, 50.00, 1.00, 0.00, -75.00, 0.00]
+      destination: [400, -70, 0]
+      sensing:
+        perception:
+          activate: true
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar:
+            visualize: false
